# proc-macro-workshop

./: .gitignore  README.md
bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: bitfield.rs  gen_enum.rs  gen_type.rs  lib.rs
bitfield/src/: checks.rs  lib.rs  specifier.rs
bitfield/tests/: 04-multiple-of-8bits.stderr  09-variant-out-of-range.stderr  progress.rs
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: .02-impl-debug.rs.swp  04-type-parameter.rs
seq/: Cargo.toml
seq/src/: lib.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: 04-variants-with-data.rs
