[package]
name = "seq"
version = "0.0.0"
#autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.108", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = {version = "2.0.113" , features = ["full", "extra-traits"]}
# TODO
